2010-12-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/linkcmds.base: Reserve enough space for the exception
	minimum prologues.

2010-12-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac: Added I2C options.  Fixed eMIOS prescaler.  Use
	standard linker command file support.
	* include/bsp.h: Declare I2C initialization function.
	* i2c/i2c_init.c: Implementation.
	* make/custom/gwlcfm.cfg, make/custom/mpc5566evb.cfg,
	make/custom/mpc55xx.inc: Use standard linker command file support.
	* startup/bspstart.c: More board specific settings.
	* Makefile.am, preinstall.am: Reflect changes above.

2010-08-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* test/tests.c: Removed file.
	* startup/bspstart.c: Fixed warnings.

2010-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Remove AC_CHECK_SIZEOF([void *]).

2010-06-29	Joel Sherrill <Joel.Sherrill@OARcorp.com>

	* configure.ac: Added AC_CHECK_SIZEOF macro.

2010-06-03	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* startup/sd-card-init.c: fix bug in mount table

2010-05-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* network/smsc9218i.c: Removed superfluous macros.

2010-05-10	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* include/bsp.h: Add BSP_SMALL_MEMORY.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/irq-config.h: Removed file.
	* Makefile.am, preinstall.am: Reflect changes above.

2010-04-07      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* configure.ac, startup/bspstart.c:
	renamed MPC55XX_CHIP_DERIVATE to MPC55XX_CHIP_TYPE

2010-04-07	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>
	* Makefile.am, configure.ac, preinstall.am, clock/clock-config.c,
	make/custom/gwlcfm.cfg, make/custom/mpc5566evb.cfg,
	startup/bspgetworkarea.c, startup/bspstart.c, startup/linkcmds,
	startup/start.S: fix GW_LCFM support
	* make/custom/mpc55xx.cfg, startup/linkcmds.memory: removed to get